--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-13.94MB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-513.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.64MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-468.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.50MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇩🇪 德国-2.31MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇩🇪 德国-2.55MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.67MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇩🇪 德国-2.54MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇩🇪 德国-2.71MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林), server: 45.144.176.135, port: 3001, type: ss, cipher: aes-256-cfb, password: qazplmn1236547dr42q}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-3.04MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 169.197.142.187, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
