--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-2.64MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇩🇪 德国-2.54MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇩🇪 德国-2.50MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-10.64MB/s(Youtube:不良林), server: 20.205.233.12, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-14.24MB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.93MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-2.71MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林), server: 45.144.176.135, port: 3001, type: ss, cipher: aes-256-cfb, password: qazplmn1236547dr42q}
   - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-14.24MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-611.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.93MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
