--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.81MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.58MB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.94MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1020.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-10.64MB/s(Youtube:不良林), server: 20.205.233.12, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.55MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-389.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-379.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 塞浦路斯-313.8KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
   - {name: 🇩🇪 德国-2.71MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林), server: 45.144.176.135, port: 3001, type: ss, cipher: aes-256-cfb, password: qazplmn1236547dr42q}
   - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: 172.99.188.71, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.04MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 169.197.142.187, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
+      - 塞浦路斯-313.8KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
+      - 塞浦路斯-313.8KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
+      - 塞浦路斯-313.8KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
+      - 塞浦路斯-313.8KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
+      - 塞浦路斯-313.8KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
+      - 塞浦路斯-313.8KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.94MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1020.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-10.64MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-389.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.9KB/s(Youtube:不良林)
+      - 塞浦路斯-313.8KB/s(Youtube:不良林)
       - 🇩🇪 德国-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
